docs-archive/apache-airflow-providers-common-ai/0.9.0/_sources/_api/airflow/providers/common/ai/policies/retry/index.rst.txt
airflow.providers.common.ai.policies.retry
==========================================

.. py:module:: airflow.providers.common.ai.policies.retry

.. autoapi-nested-parse::

   LLM-powered retry policy using pydantic-ai for error classification.

   Requires Airflow 3.3+ (RetryPolicy was added in AIP-105).



Classes
-------

.. autoapisummary::

   airflow.providers.common.ai.policies.retry.ErrorClassification
   airflow.providers.common.ai.policies.retry.LLMRetryPolicy


Functions
---------

.. autoapisummary::

   airflow.providers.common.ai.policies.retry.redact_registered_secrets


Module Contents
---------------

.. py:class:: ErrorClassification(/, **data)

   Bases: :py:obj:`pydantic.BaseModel`


   Structured LLM output for error classification.


   .. py:attribute:: category
      :type:  str

      One of: rate_limit, auth, network, data, resource, transient, permanent.



   .. py:attribute:: should_retry
      :type:  bool

      Whether the operation should be retried.



   .. py:attribute:: suggested_delay_seconds
      :type:  int
      :value: 0


      How long to wait before retrying (0 if should_retry is False).



   .. py:attribute:: reasoning
      :type:  str

      Brief explanation of the classification decision.



.. py:function:: redact_registered_secrets(message)

   Mask values registered via ``mask_secret()``; the default ``redactor`` for :class:`LLMRetryPolicy`.


.. py:class:: LLMRetryPolicy(llm_conn_id, model_id = None, instructions = None, fallback_rules = None, timeout = 30.0, *, redactor = None, redact_exception = True, max_exception_length = 4096)

   Bases: :py:obj:`airflow.sdk.definitions.retry_policy.RetryPolicy`


   Retry policy that uses an LLM to classify errors and decide retry behaviour.

   Uses :class:`~airflow.providers.common.ai.hooks.pydantic_ai.PydanticAIHook`
   to call any configured LLM provider (OpenAI, Anthropic, Bedrock, Vertex,
   Ollama, etc.) for error classification with structured output.

   When the LLM call itself fails, the policy falls back to ``fallback_rules``
   (if provided) or returns DEFAULT to use the task's standard retry logic.

   :param llm_conn_id: Airflow connection ID for the LLM provider.
   :param model_id: Model identifier override (e.g. ``"openai:gpt-4o-mini"``
       for cost efficiency). If not set, uses the model from the connection.
   :param instructions: Custom system prompt for classification.
       Defaults to a general-purpose error classifier.
   :param fallback_rules: Optional list of
       :class:`~airflow.sdk.definitions.retry_policy.RetryRule` applied when the
       LLM call fails. Provides a deterministic safety net.
   :param timeout: Maximum seconds to wait for the LLM response before
       falling back.  Defaults to 30s.  The LLM provider's own timeout
       (e.g. 600s for Anthropic) is much longer; this keeps the retry
       decision path fast even when the provider is degraded.
   :param redactor: Callable applied to the exception's string representation
       before it is added to the classification prompt. Defaults to
       :func:`~airflow.providers.common.ai.policies.retry.redact_registered_secrets`,
       which only masks values already registered via ``mask_secret()``.
       Pass a custom callable to replace the default masking entirely --
       for example to redact free-text PII the secrets masker cannot see.
       To disable masking altogether, use ``redact_exception=False`` --
       not ``redactor=None``.
   :param redact_exception: Whether to redact the exception's string
       representation before it is added to the classification prompt.
       Defaults to ``True``. Set to ``False`` to send the raw exception
       text as-is. Passing ``redact_exception=False`` together with
       an explicit ``redactor`` raises ``ValueError`` at construction time,
       since the two settings would otherwise conflict silently.
   :param max_exception_length: Maximum number of characters of the
       (already redacted) exception message included in the prompt. Longer
       messages are truncated with a trailing ``"... (truncated)"`` marker.
       Must be a positive integer. Defaults to 4096.

   .. warning::
       The exception's string representation is sent to the configured
       external LLM provider (OpenAI, Anthropic, Bedrock, Vertex, Ollama,
       etc.) as part of the classification prompt, so it may leak whatever
       the failing task put in the exception message — connection strings,
       credential fragments, PII, or other secrets. By default
       ``_classify()`` runs the message through
       :func:`~airflow.providers.common.ai.policies.retry.redact_registered_secrets`
       via ``redactor``, which masks values already registered via
       ``mask_secret()`` (for example, connection passwords Airflow
       captured while resolving the failing task's connections). This does
       **not** perform general-purpose PII detection and will not catch
       arbitrary sensitive strings that were never registered as secrets --
       for free-text PII (emails, customer names, etc.) supply your own
       ``redactor``, or pass ``redact_exception=False`` to disable
       redaction altogether. You are still responsible for confirming that
       your task's exception messages are safe to send to a third-party
       LLM provider.


   .. py:attribute:: llm_conn_id


   .. py:attribute:: model_id
      :value: None



   .. py:attribute:: instructions
      :value: Multiline-String

      .. raw:: html

         <details><summary>Show Value</summary>

      .. code-block:: python

         """You are an error classifier for a data pipeline system. Given an error message from a failed task, classify it into one of these categories:
         
         - rate_limit: API throttling or quota exceeded. Should retry after a delay.
         - auth: Credentials invalid, expired, or missing permissions. Should NOT retry.
         - network: Transient connectivity issue. Should retry quickly.
         - data: Schema validation, type mismatch, or bad input data. Should NOT retry.
         - resource: Resource not found or unavailable (e.g., missing table, bucket). Should NOT retry.
         - transient: Temporary issue likely to resolve on its own. Should retry.
         - permanent: Problem that won't resolve without code or config changes. Should NOT retry.
         
         Set suggested_delay_seconds based on the error type: 60 for rate limits, 10 for network, 30 for transient. Set 0 for errors that should not retry."""

      .. raw:: html

         </details>




   .. py:attribute:: fallback_rules
      :value: None



   .. py:attribute:: timeout
      :value: 30.0



   .. py:attribute:: redactor
      :type:  collections.abc.Callable[[str], str] | None
      :value: None



   .. py:attribute:: redact_exception
      :value: True



   .. py:attribute:: max_exception_length
      :value: 4096



   .. py:method:: evaluate(exception, try_number, max_tries, context = None)

      Decide whether and how to retry given the failure.

      .. note::
         ``AirflowFailException`` and ``AirflowSensorTimeout`` always fail
         the task immediately.  The retry policy is never consulted for
         these exceptions.

      :param exception: The exception that caused the task failure.
      :param try_number: Current try number (1-based).
      :param max_tries: Maximum tries configured on the task.
      :param context: Airflow task context (may be ``None``).



